--- a/codesquare/src/main/resources/templates/fragments/header.html
+++ b/codesquare/src/main/resources/templates/fragments/header.html
@@ -29,7 +29,7 @@
             <li class="nav-item">
                <a class="nav-link" href="#">세미나</a>
                <ul class="csnav-dropdown">
-                  <li><a class="nav-link" href="#">세미나모집</a>
+                  <li><a class="nav-link" href="/seminarList">세미나모집</a>
                   <li><a class="nav-link" href="#">세미나후기</a>
                   <li><a class="nav-link" href="/companyList">세미나룸</a>
                </ul>
@@ -37,7 +37,7 @@
             <li class="nav-item">
                <a class="nav-link" href="#">커뮤니티</a>
           <ul class="csnav-dropdown">
-                  <li><a class="nav-link" href="#">자유게시판</a>
+                  <li><a class="nav-link" href="/getfree">자유게시판</a>
                   <li><a class="nav-link" href="#">질문있어요</a>
             <li><a class="nav-link" href="#">IT Forum</a>
                </ul>
