--- a/codesquare/src/main/resources/templates/board/noticeWrite.html
+++ b/codesquare/src/main/resources/templates/board/noticeWrite.html
@@ -8,7 +8,7 @@
 <body>
 
 	<table width="500" cellpadding="0" cellspacing="0" border="1" class="type11">
-		<form action="writego" method="post">
+		<form action="writego">
 			<tr>
 				<td> 이름 </td>
 				<td> <input type="text" name="nickName" size = "50" required> </td>
