--- a/codesquare/src/main/resources/templates/board/noticeBoard.html
+++ b/codesquare/src/main/resources/templates/board/noticeBoard.html
@@ -3,8 +3,9 @@
 xmlns:sd="http://www.thymeleaf.org/spring-data"
 xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 layout:decorator="layout/mainLayout">
+<meta charset="utf-8">
 <head>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 <title>게시판 리스트</title>
 </head>
 <body>
@@ -12,7 +13,7 @@ layout:decorator="layout/mainLayout">
 <div class="container" layout:fragment="content">
 		<div class="lecture_header_item d-flex justify-content-between"
 			style="border-bottom: 2px solid #D8D8D8">
-	<h1 align="center"><a href=noticeBoard>공지사항</a></h1>
+	<h1 align="center"><a href=home>공지사항</a></h1>
 	</div>
 
 	<div class="container">
@@ -34,26 +35,22 @@ layout:decorator="layout/mainLayout">
 	             <td th:text="${Board.writeDate}" ></td>
 	             <td th:text="${Board.modifyDate}" ></td>
 	             <td th:text="${Board.hit}" ></td>
-
 	        </tr>
 		</table>
 		<a href="noticeWrite" class="btn btn-default" role="button">글쓰기</a>
 	</div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <div align="center">
-              <ul class="pagination pagination-sm no-margin pull-right">
-              <li th:if="${pageMaker.prev} == true">
-              	<a th:href="@{/noticeBoard(page=${pageMaker.startPage}-1,perPageNum=${pageMaker.cri.perPageNum})}">&laquo;</a>
+              <ul class="pagination justify-content-center  no-margin pull-right">
+              <li class="page-item" th:if="${pageMaker.prev} == true">
+              	<a class="page-link" style="background-color: #9370DB;" th:href="@{/home(page=${pageMaker.startPage}-1,perPageNum=${pageMaker.cri.perPageNum})}">&laquo;</a>
               </li>
 
-              <li th:each="idx,iterStat : ${#numbers.sequence(pageMaker.startPage,pageMaker.endPage)}"  th:classappend="${pageMaker.cri.page} == ${idx} ? active : null">
-                <a th:href="@{/noticeBoard(page=${idx},perPageNum=${pageMaker.cri.perPageNum})}" th:text="${idx}"></a>
+              <li class="page-item" th:each="idx,iterStat : ${#numbers.sequence(pageMaker.startPage,pageMaker.endPage)}"  th:classappend="${pageMaker.cri.page} == ${idx} ? active : null">
+                <a class="page-link" style="background-color: #9370DB;" th:href="@{/home(page=${idx},perPageNum=${pageMaker.cri.perPageNum})}" th:text="${idx}"></a>
               </li>
                 
-              <li th:if="${pageMaker.next} == true and ${pageMaker.endPage > 0}">
-              	<a th:href="@{/noticeBoard(page=${pageMaker.endPage}+1,perPageNum=${pageMaker.cri.perPageNum})}">&raquo;</a>
+              <li class="page-item" th:if="${pageMaker.next} == true and ${pageMaker.endPage > 0}">
+              	<a class="page-link" style="background-color: #9370DB;" th:href="@{/home(page=${pageMaker.endPage}+1,perPageNum=${pageMaker.cri.perPageNum})}">&raquo;</a>
               </li>
               </ul>
         </div>
