관리자 회원관리 1차 완성. 강의관리 리스트불러오기까지만 제작완료

--- a/codesquare/src/main/resources/templates/fragments/adminSide.html
+++ b/codesquare/src/main/resources/templates/fragments/adminSide.html
@@ -11,7 +11,7 @@
       Tip 2: you can also add an image using data-image tag
   -->
       <div class="logo">
-        <a class="navbar-brand simple-text logo-mini" href="/"><img th:src="@{/static/images/logo.png}" alt="noimg" /></a>
+        <a class="navbar-brand simple-text logo-mini" href="/"><img th:src="@{/static/images/logo.png}" alt="noimg"  style="width:100px;"/></a>
         <a href="/" class="simple-text logo-normal">CodeSquare</a>
       </div>
       <div class="sidebar-wrapper">
