--- a/codesquare/src/main/resources/static/assets/css/material-dashboard.css
+++ b/codesquare/src/main/resources/static/assets/css/material-dashboard.css
@@ -4877,8 +4877,8 @@ tbody.collapse.show {
 .page-item.active .page-link {
   z-index: 1;
   color: #ffffff;
-  background-color: #2196f3;
-  border-color: #2196f3;
+  background-color: #9c27b0;
+  border-color: #9c27b0;
 }
 
 .page-item.disabled .page-link {
