--- a/codesquare/src/main/resources/templates/admin/lectureControl.html
+++ b/codesquare/src/main/resources/templates/admin/lectureControl.html
@@ -1,52 +1,144 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	xmlns:sd="http://www.thymeleaf.org/spring-data"
 	layout:decorator="layout/adminLayout"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-  <title>AdminPage by CodeSquare</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<title>AdminPage by CodeSquare</title>
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta
+	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+	name="viewport" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
+<th:block layout:fragment="adminCss">
+	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap-select/1.13.3/css/bootstrap-select.min.css" th:href="@{/webjars/bootstrap-select/1.13.3/css/bootstrap-select.min.css}">
+	<link rel="stylesheet" type="text/css" href="/webjars/font-awesome/5.7.1/css/all.css" th:href="@{/webjars/font-awesome/5.7.1/css/all.min.css}" />
+	<link rel="stylesheet" type="text/css" href="/static/styles/responsive.css" th:href="@{/static/styles/responsive.css}">
+	<link rel="stylesheet" type="text/css" href="@{/static/styles/hansolCustom.css}" th:href="@{/static/styles/hansolCustom.css}">
+	<link rel="stylesheet" type="text/css" href="@{/static/styles/admin/adminLectureCustom.css}" th:href="@{/static/styles/admin/adminLectureCustom.css}">
+	
+</th:block>
 </head>
 
 <body>
-  <div class="wrapper" layout:fragment="content">
-    <div class="main-panel">
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
-        <div class="container-fluid">
-          <div class="navbar-wrapper">
-            <a class="navbar-brand" href="#pablo">Dashboard</a>
-          </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="navbar-toggler-icon icon-bar"></span>
-            <span class="navbar-toggler-icon icon-bar"></span>
-            <span class="navbar-toggler-icon icon-bar"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#pablo">
-                  <i class="material-icons">notifications</i> Notifications
-                </a>
-              </li>
-              <!-- your navbar here -->
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!-- End Navbar -->
-      <div class="content">
-        <div class="container-fluid">
-          <!-- your content here -->
-        </div>
-      </div>
-      
-    </div>
-  </div>
+	<div class="wrapper" layout:fragment="content">
+		<div class="main-panel">
+			<div class="content">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="card">
+								<div class="card-header card-header-primary">
+									<h3 class="card-title">강의 관리</h3>
+									<div class="row">
+										<div class="col-lg-3 btn-category">
+											<form class="form-inline ml-auto"
+												action="/admin/member/search" method="get">
+												<div class="form-group no-border">
+													<input id="input-searchbox" type="text"
+														class="form-control" name="content" placeholder="Search">
+												</div>
+												<button id="btn-search" type="submit"
+													class="btn btn-neutral btn-icon btn-round">
+													<i class="material-icons">search</i>
+												</button>
+											</form>
+										</div>
+										<div class="col-lg-2 h4">
+											<label id="div-alert-area"></label>
+										</div>
+										<div id="sort-categorybox" class="col-lg-7"	style="text-align: right;">
+											<div class="btn-group btn-group-toggle" data-toggle="buttons">
+												<label class="btn btn-lang-kind btn-secondary btn-sm active" style="margin:auto;">
+												<input type="radio" name="options" id="all" autocomplete="off"  >All</label>
+												<label th:each="tag:${tagList}"	class="btn btn-lang-kind btn-secondary btn-sm" style="margin:auto;">
+												<input type="radio" name="options" th:id="@{${tag}}" th:value="@{${tag}}" th:text="@{${tag}}" autocomplete="off"  /></label>
+											</div>
+										</div>
+									</div>
+								</div>
+								</ div>
+								<div class="card-body">
+									<div class="table-responsive">
+										<table id="table-memberinfo" class="table"
+											style="text-align: center">
+											<thead class=" text-primary">
+												<th>Check</th>
+												<th colspan="2" class="text-left">Thumbnail</th>
+												<th colspan="2" class="text-left">Title</th>
+												<th>Tag</th>
+												<th>Author</th>
+												<th>price</th>
+												<th>Hit</th>
+												<th>StdCount</th>
+												<th>CompleteCount</th>
+											</thead>
+											<tbody>
+												<tr th:each="item:${lectureList}"  th:id="@{lectureId-}+${item.id}">
+													<td>
+														<div class="form-check">
+															<label class="form-check-label"> 
+																<input	class="form-check-input" type="checkbox" value="">
+																	<span class="form-check-sign"><span class="check"></span></span>
+															</label>
+														</div>
+													</td>
+													<td colspan="2" class="text-left">
+														<img class="lecture-thumbnail" th:src="@{${item.thumbnailPath}}" />
+													</td>
+													<td colspan="2" class="text-left" th:text="@{${item.title}}">제목</td>
+													<td th:text="@{${item.tag}}">태그</td>
+													<td th:text="@{${item.nickName}}">작성자</td>
+													<td th:text="@{${item.priceInfo}}">가격정보</td>
+													<td th:text="@{${item.hit}}">조회수</td>
+													<td th:text="@{${item.studentCount}}">수강인원</td>
+													<td th:text="@{${item.completeCount}}">완강인원</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+									<div align="center">
+										<ul
+											class="pagination justify-content-center  no-margin pull-right ">
+											<li class="page-item" th:if="${pageMaker.prev} == true">
+												<a class="page-link"
+												th:href="@{/admin/lecture(page=${pageMaker.startPage}-1,perPageNum=${pageMaker.cri.perPageNum})}">&laquo;</a>
+											</li>
+											<li class="page-item"
+												th:each="idx,iterStat : ${#numbers.sequence(pageMaker.startPage,pageMaker.endPage)}"
+												th:classappend="${pageMaker.cri.page} == ${idx} ? active : null">
+												<a class="page-link"
+												th:href="@{/admin/lecture(page=${idx},perPageNum=${pageMaker.cri.perPageNum})}"
+												th:text="${idx}"></a>
+											</li>
+											<li class="page-item"
+												th:if="${pageMaker.next} == true and ${pageMaker.endPage > 0}">
+												<a class="page-link"
+												th:href="@{/admin/lecture(page=${pageMaker.endPage}+1,perPageNum=${pageMaker.cri.perPageNum})}">&raquo;</a>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div sec:authorize="hasAnyRole('ROLE_2', 'ROLE_3')"
+						class="d-flex flex-row-reverse bg-light">
+						<a class="p-2 btn btn-secondary btn-lg" th:href="@{learn/intro}">강의등록</a>
+					</div>
+					<th:block layout:fragment="script">
+						<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
+						<script type="text/javascript"
+							th:src="@{/static/js/lecture/lectureSearchCustom.js}"></script>
+					</th:block>
+				</div>
+			</div>
+
+		</div>
+	</div>
 </body>
 </html>
