--- a/codesquare/src/main/resources/templates/fragments/header.html
+++ b/codesquare/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
 <header class="main-header" th:fragment="headerFragment">
 
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/"><img th:src="@{/static/images/logo.png}" alt="noimg" /></a>
+      <a class="navbar-brand" href="/"><img th:src="@{/static/images/logo.png}" alt="noimg" style="width:100px;"/></a>
       <div class="collapse navbar-collapse" id="navbarColor03">
          <ul class="navbar-nav mr-auto">
             
