--- a/codesquare/src/main/resources/static/styles/member/find.css
+++ b/codesquare/src/main/resources/static/styles/member/find.css
@@ -72,10 +72,10 @@ form .error {
 
 .switch {
   position: relative;
-  height: 40px;
+  height: 42px;
   width: 100%;
   margin: 20px auto;
-  background: #DDCFE2;
+  border: 1px solid #AE8CBA;
   border-radius: 6px;
   -webkit-box-shadow: none;
   box-shadow: none;
