--- a/codesquare/src/main/resources/templates/fragments/messageHeader.html
+++ b/codesquare/src/main/resources/templates/fragments/messageHeader.html
@@ -7,18 +7,19 @@
 	th:content="${_csrf.headerName}" />
  
  
- <header th:fragment="messageHeader">
+ <header th:fragment="messageHeader" class="fixed-top">
  
-	<nav id="message-navbar" class="navbar m-3 navbar-expand-lg navbar-light" >
-		<a class="navbar-brand " href="#">
+	<nav id="message-navbar" class="navbar navbar-expand-lg navbar-light" >
+		<a class="navbar-brand " th:href="@{/message/receivedMessage}">
 		<i class="far fa-envelope"></i> 내 쪽지함</a>
 
 		<div class="navbar" id="navbarText">
 			<ul class="navbar-nav">
-				<li class="nav-item"><a id="receivedMessage" class="nav-link active" th:href="@{/message/receivedMessage}">받은 쪽지함
+				<li class="nav-item"><a id="receivedMessageListH" class="nav-link" th:href="@{/message/receivedMessage}">받은 쪽지함
 				</a></li>
-				<li class="nav-item"><a id="snetMessage" class="nav-link" th:href="@{/message/sentMessage}">보낸 쪽지함</a>
+				<li class="nav-item"><a id="sentMessageListH" class="nav-link" th:href="@{/message/sentMessage}">보낸 쪽지함</a>
 				</li>
+			
 			</ul>
 
 		</div>
