--- a/codesquare/src/main/resources/templates/layout/mainLayout.html
+++ b/codesquare/src/main/resources/templates/layout/mainLayout.html
@@ -56,7 +56,7 @@
 
 <script th:src="@{/static/js/securityAjax.js}"></script>
 <th:block layout:fragment="script"></th:block>
-
+<th:block layout:fragment="css"></th:block>
 
 </body>
 </html>
