--- a/codesquare/src/main/resources/templates/member/myPage/myReceivedMessage.html
+++ b/codesquare/src/main/resources/templates/member/myPage/myReceivedMessage.html
@@ -12,36 +12,33 @@
 <body>
 
 	<div id="messageContent" layout:fragment="messageContent">
-
 		<div id="receivedMessage" class="small">
-			<div class="row py-3">
-				<div class="col-4 input-group-prepend">
-					<input type="button" class="mybtn mx-1" id="deleteMsg" value="삭제">
-					<input type="button" class="mybtn" id="newMessageBtn" value="쪽지쓰기">
-				</div>
 
-				<!-- 삭제 모달 -->
-
-				<div id="delete-dialog" class="jumbotron">
-					<div id="delete-close" class="text-right">
-						<i class="fas fa-times  align-top "></i>
+			<form th:action="@{/message/receivedMessage/}">
+				<div class="row py-3">
+					<div class="col-4 input-group-prepend">
+						<input type="button" class="mybtn mx-1" id="deleteMsg" value="삭제">
+						<input type="button" class="mybtn" id="newMessageBtn" value="쪽지쓰기">
 					</div>
-					<div id="delete-dialog-content" class="text-center">
-						 
+
+					<!-- 삭제 모달 -->
+
+					<div id="delete-dialog" class="jumbotron">
+						<div id="delete-close" class="text-right">
+							<i class="fas fa-times  align-top "></i>
+						</div>
+						<div id="delete-dialog-content" class="text-center"></div>
+					</div>
+					<div class="col-1"></div>
+
+					<div class="col-7 input-group-prepend ">
+						<input class="form-control input-group-sm mx-1" type="text"
+							placeholder="Search" name="keyword"
+							th:value="${pageMaker.cri.keyword}"> <input
+							name="searhBtn" class="mybtn " type="submit" value="찾기">
 					</div>
 				</div>
-				<div class="col-1">
-					
-				</div>
-
-
-				<div class="col-7 input-group-prepend ">
-					<input class="form-control input-group-sm mx-1" type="text"
-						placeholder="Search" name="keyword"> <input name="searhBtn" class="mybtn " type="button"
-						value="찾기">
-				</div>
-
-			</div>
+			</form>
 
 			<div class="row shadow-sm text-center py-2">
 				<br />
@@ -95,21 +92,21 @@
 					<ul class="pagination justify-content-center">
 						<li class="page-item" th:if="${pageMaker.prev} == true"><a
 							class="page-link"
-							th:href="@{/message/receivedMessage(page=${pageMaker.startPage}-1,perPageNum=${pageMaker.cri.perPageNum})}">&laquo;</a>
+							th:href="@{/message/receivedMessage(page=${pageMaker.startPage}-1,perPageNum=${pageMaker.cri.perPageNum}, keyword=${pageMaker.cri.keyword})}">&laquo;</a>
 						</li>
 
 						<li class="page-item"
 							th:each="idx,iterStat : ${#numbers.sequence(pageMaker.startPage,pageMaker.endPage)}"
 							th:classappend="${pageMaker.cri.page} == ${idx} ? active : null">
 							<a class="page-link"
-							th:href="@{/message/receivedMessage(page=${idx},perPageNum=${pageMaker.cri.perPageNum})}"
-							th:text="${idx}"></a>
+							th:href="@{/message/receivedMessage(page=${idx},perPageNum=${pageMaker.cri.perPageNum},  keyword=${pageMaker.cri.keyword})}"
+							th:text="${idx}" th:if="${idx}"></a>
 						</li>
 
 						<li class="page-item"
 							th:if="${pageMaker.next} == true and ${pageMaker.endPage > 0}">
 							<a class="page-link"
-							th:href="@{/message/receivedMessage(page=${pageMaker.endPage}+1,perPageNum=${pageMaker.cri.perPageNum})}">&raquo;</a>
+							th:href="@{/message/receivedMessage(page=${pageMaker.endPage}+1,perPageNum=${pageMaker.cri.perPageNum}, keyword=${pageMaker.cri.keyword})}">&raquo;</a>
 						</li>
 					</ul>
 				</div>
