--- a/codesquare/src/main/resources/templates/board/freeModify.html
+++ b/codesquare/src/main/resources/templates/board/freeModify.html
@@ -32,26 +32,26 @@ layout:decorator="layout/mainLayout">
     color: #000;
     width: 165px;
 }
-#lectureImg-dropzone{
-	text-align: center;
-}
 </style>
 </head>
 <body>
-<div class="container" layout:fragment="content"><br>
-<form action="freewritego" name="freeform" id="freeform">
-	<div class="lecture_header_item d-flex justify-content-between" style="border-bottom: 5px solid black;">
-		<h1 align="center"><a href=getfree style="color: black;">자유게시판</a></h1>
-	</div>
-		<div style="margin-top: 10px; border-bottom: 5px solid black;">
-			<input type="text" name="title" placeholder="제목을입력해주세요." style="margin-bottom: 10px; width: 1110px; height: 50px" autocomplete="off">
-	</div>
-<textarea name="content" id="content" style="width: 1110px; height:400px;"  autocomplete="off"></textarea>
-<!-- <textarea name="content" id="content" style="width: 100%; height: 412px; min-width: 610px; overflow: visible;" rows="25"></textarea> -->
-			<div align="center">
-				<button type="submit" style="margin-top: 10px;" id="savebutton" name="savebutton">확인</button><button type="button" style="margin-top: 10px" id="button2" onclick="history.back(-1);">취소</button>
-			</div>
-</form>
+<div class="container" layout:fragment="content">
+<form action="freeupdate">
+<input type="hidden" name="id" th:value="${list.id}">
+	<div style="border-bottom: 2px solid;"><h1 align="left"><a href="/getfree" style="color: black;">자유게시판</a></h1></div>
+	<div style="border-bottom: 2px solid; border-bottom-color: gray;">
+	<a style="float: right;"><span th:text="${list.hit}" style="float: right;"></span>조회수 &nbsp;</a>
+	<h2><input type="text" th:value="${list.title}" name="title" class="article__title"></h2></div>
+				<section class="article__data">
+				<div class="fr-view">
+				<textarea name="content" id="content" th:utext="${list.content}" style="width: 1110px; height:400px;"  autocomplete="off"></textarea>
+				</div>
+				</section>
+				<div align="center">
+				<button type="submit" style="margin-top: 10px;" id="savebutton" name="savebutton">수정확인</button> &nbsp;&nbsp;
+				<button type="button" style="margin-top: 10px;" id="button2" onclick="history.back(-1);">취소</button>
+				</div>
+				</form>
 <th:block layout:fragment="script">
 	<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 	<script type="text/javascript" th:src="@{/static/js/smarteditor2/dist/js/service/HuskyEZCreator.js}"></script>
