--- a/codesquare/src/main/resources/templates/board/noticeView.html
+++ b/codesquare/src/main/resources/templates/board/noticeView.html
@@ -15,7 +15,7 @@ layout:decorator="layout/mainLayout">
 	<div style="border-bottom: 2px solid; border-bottom-color: gray;">
 	<a style="float: right;"><span th:text="${list.hit}" style="float: right;"></span>조회수 &nbsp;</a>
 	<h2><span th:text="${list.title}" class="article__title"></span></h2></div>
-				<section class="article__data">
+				<section class="article__data" style="border-bottom: 2px solid; border-bottom-color: gray;">
 				<div class="fr-view">
 				<p th:utext="${list.content}" style="color: gray; font-size: 17px;"></p>
 				</div>
